--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,4 +38,5 @@ Suggests:
     fastmap (>= 1.1.0)
 Config/testthat/edition: 3
 Config/testthat/parallel: false
-    
+URL: https://github.com/Sophie-c-h/gpsmartr
+BugReports: https://github.com/Sophie-c-h/gpsmartr/issues
